# similarCpp

./: .gitignore  AUDIT.md  AUDIT_ISSUES_RESOLVED.md  CONTRIBUTING.md  CPP_AUDIT_SUMMARY.md  CPP_ENGINE_README.md  CPP_JAVA_ALIGNMENT_CHECK.md  CPP_OPTIMIZATION_COMPLETE.md  CPP_REFACTORING_PLAN.md  CPP_REFACTORING_SUMMARY.md  CPP_TRANSLATION_AUDIT.md  DOCUMENTATION_INDEX.md  DSL_IMPLEMENTATION_SUMMARY.md  DSL_QUICK_REFERENCE.md  ENHANCEMENTS_SUMMARY.md  GETTING_STARTED.md  IDEAS.md  IMPLEMENTATION_STATUS.md  JAMFREE_CPP_PLAN.md  JAMFREE_INTEGRATION_COMPLETE.md  JAMFREE_PROGRESS.md  JAMFREE_SIMILAR_INTEGRATION_PROGRESS.md  MULTITHREADED_ENGINE_PYTHON.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_OPTIMIZATIONS.md  PHASE_1_COMPLETE.md  PHASE_2_COMPLETE.md  PHASE_3_COMPLETE.md  PROBE_SYSTEM.md  PROJECT_STATUS.md  PYTHON_CPP_OPTIMIZATION.md  PYTHON_DSL_EXAMPLES_PROGRESS.md  PYTHON_DSL_PLAN.md  PYTHON_EXAMPLES_OPTIMIZED.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  RELEASE.md  RUNNING_BOIDS_DSL.md  RUNNING_EXAMPLES.md  (+14 more)
.github/: CODEOWNERS  (+2 more)
cpp/: AUDIT_REPORT.md  CMakeLists.txt  EXTENDEDLIBS_COMPLETE.md  EXTENDEDLIBS_FINAL.md  MULTITHREADED_ENGINE_STATUS.md  README.md  WEB_100_PERCENT_COMPLETE.md  WEB_FINAL_STATUS.md  WEB_IMPLEMENTATION_COMPLETE.md  WEB_IMPLEMENTATION_PLAN.md  WEB_IMPLEMENTATION_STATUS.md  WEB_INTERFACE_PLAN.md  WEB_INTERFACE_README.md
cpp/doc/: cpp_port.md  index.md  jamfree_cpp.md  migration_from_java.md  python_bindings.md  similar2logo_cpp.md
cpp/extendedkernel/: CMakeLists.txt
cpp/extendedkernel/examples/: extendedlibs_demo.cpp  improved_ecosystem.cpp  minimal_web_server.cpp  predator_prey_example.cpp  random_demo.cpp  simple_example.cpp  web_predator_prey.cpp
cpp/extendedkernel/include/agents/: ExtendedAgent.h  IAgtDecisionModel.h  IAgtGlobalStateRevisionModel.h  IAgtPerceptionModel.h
cpp/extendedkernel/include/environment/: ExtendedEnvironment.h  IEnvNaturalModel.h
cpp/extendedkernel/include/levels/: ExtendedLevel.h  ILevelReactionModel.h
cpp/extendedkernel/include/simulationmodel/: AbstractExtendedSimulationModel.h  IEndCriterionModel.h  ISimulationModel.h  ISimulationParameters.h
cpp/extendedkernel/src/agents/: ExtendedAgent.cpp
cpp/jamfree/: ADAPTIVE_HYBRID_QUICKSTART.md  ADAPTIVE_HYBRID_SIMULATION.md  ADVANCED_PERFORMANCE.md  BUG_FIX_WEB_UI.md  CMakeLists.txt  GPU_IMPLEMENTATION_SUMMARY.md  GPU_INTEGRATION_COMPLETE.md  GPU_METAL_ACCELERATION.md  GPU_WEB_INTEGRATION.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_STATUS.md  MACROSCOPIC_IMPLEMENTATION_SUMMARY.md  MACROSCOPIC_MODELS.md  MICRO_MACRO_AUTO_SWITCH.md  MICRO_MACRO_BRIDGE_IMPROVEMENTS.md  MICRO_MACRO_INTERFACE_COMPLETE.md  MOBIL_IMPLEMENTATION.md  NEXT_STEPS_COMPLETED.md  OPTIMIZATION_COMPLETION_REPORT.md  OSM_INTEGRATION.md  PERFORMANCE_OPTIMIZATIONS.md  PYTHON_BINDINGS_SUMMARY.md  QUICK_START.md  README.md  REALISTIC_SIMULATION.md  SCRIPTS_QUICK_REFERENCE.md  SESSION_SUMMARY_MICRO_MACRO_SIMILAR.md  SESSION_SUMMARY_SIMILAR_INTEGRATION.md  SIMILAR_INTEGRATION_COMPLETE.md  SIMILAR_INTEGRATION_FINAL.md  SIMILAR_INTEGRATION_PLAN.md  SIMILAR_INTEGRATION_PROGRESS.md  SIMULATION_SCRIPTS.md  TEST_REPORT.md  TEST_RESULTS_SUMMARY.md  WEB_UI_COMPLETION.md  WEB_UI_FIX.md  WEB_UI_INTEGRATION_COMPLETE.md  WEB_UI_OPTIMIZATIONS.md  WEB_UI_SUMMARY.md  (+8 more)
cpp/jamfree/examples/: complete_simulation_example.cpp  highway_example.cpp  highway_simulation.cpp  lane_changing_example.cpp  similar_agent_example.cpp
cpp/jamfree/examples/python/: README.md  adaptive_hybrid_example.py  city_scale_simulation.py  gpu_metal_example.py  incident_response.py  macroscopic_example.py  osm_hybrid_simulation.py  realistic_simulation.py  traffic_signal_optimization.py
cpp/jamfree/gpu/metal/: MetalCompute.h  MetalCompute.mm  kernels.metal
cpp/jamfree/hybrid/include/: AdaptiveSimulator.h
cpp/jamfree/hybrid/src/: AdaptiveSimulator.cpp
cpp/jamfree/jamfree.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
cpp/jamfree/kernel/include/: Simulation.h
cpp/jamfree/macroscopic/include/: CTM.h  LWR.h  MicroMacroBridge.h
cpp/jamfree/microscopic/include/: IDM.h  IDMEnhanced.h  IDMLookup.h  MOBIL.h
cpp/jamfree/python/: README.md  test_bindings_new.py  test_engine_manager.py  test_engine_manager_full.py  test_engine_minimal.py
cpp/jamfree/python/examples/: highway_simulation.py  osm_import_example.py
cpp/jamfree/python/jamfree/: __init__.py
cpp/jamfree/python/src/: bindings.cpp  metal_bindings.mm
cpp/jamfree/python/web/: README.md  app.py  app_minimal.py  engine_manager.py  osm_download_response.json  requirements.txt  routing.py  start.sh  test_all_optimizations.py  test_optimizations.py  traffic_data.py
cpp/jamfree/realdata/include/: OSMParser.h  TrafficDataSource.h
cpp/jamfree/realdata/src/: OSMParser.cpp
cpp/jamfree/tests/: basic_jamfree_tests.cpp  comprehensive_jamfree_tests.cpp  test_mobil.py
cpp/jamfree/uploads/: osm_download_48.86403720372053_2.226963043212891.osm  osm_download_50.49322778809216_2.5060844421386723.osm  osm_download_50.5229769743945_2.6096820831298833.osm
cpp/microkernel/: CMakeLists.txt
cpp/microkernel/include/: AgentCategory.h  ILocalState.h  IProbe.h  ISimulationEngine.h  ISimulationModel.h  LevelIdentifier.h  SimulationTimeStamp.h
cpp/microkernel/include/agents/: IAgent.h  IAgent4Engine.h  IGlobalState.h  ILocalStateOfAgent.h  ILocalStateOfAgent4Engine.h  IPerceivedData.h
cpp/microkernel/include/dynamicstate/: ConsistentPublicLocalDynamicState.h  IModifiablePublicLocalDynamicState.h  IPublicDynamicStateMap.h  IPublicLocalDynamicState.h  TransitoryPublicLocalDynamicState.h
cpp/microkernel/include/engine/: MultiThreadedSimulationEngine.h  SequentialSimulationEngine.h
cpp/microkernel/src/: main.cpp
cpp/similar2logo/examples/: branching_dsl_example.py  branching_timelines.py  test_marks.py
cpp/similar2logo/python/: CMakeLists.txt  CMakeLists_logo_cpp.txt  bindings_logo_cpp.cpp  bindings_minimal.cpp
cpp/similar2logo/src/: similar2logo_compilation_unit.cpp
cpp/similar2logo/tests/: comprehensive_tests.cpp  core_tests.cpp  extended_kernel_tests.cpp  influences_test.cpp
(+288 files in other folders)
